# rsc

./: Cargo.toml  rsc.spec.md
examples/: parseExpression.rsc  simple.rsc
examples/manualParse/: parseExpression.json
samples/: playground.fn  simple.fn
src/: fns.pest  main.rs
src/lexer/: mod.rs  tok.rs
src/parser/: error.rs  mod.rs
src/parser/ast/: context.rs  function.rs  function_parameter.rs  ident.rs  mod.rs  statement.rs  type_definition.rs
src/parser/ast/expr/: atom.rs  literal.rs  mod.rs  operator.rs  pratt.rs
src/parser/macros/: mod.rs  next.rs  validate_rule.rs
